[package]
name = "bellman-bignat"
version = "0.1.0"

[dependencies]
derivative = "1.0.0"
docopt = "1"
exitcode = "1.1.2"
fnv = "1.0.6"
rand = "0.4.5"
hex = "0.3.2"
time = "0.1"
memmap = "0.7"
num-bigint = "0.2"
num-traits = "0.2"
num-integer = "0.1"
sapling-crypto = { path = "../sapling-crypto" }
#sapling-crypto = { package = "sapling-crypto_ce", git = "https://github.com/alex-ozdemir/sapling-crypto", branch = "bls12-poseidon" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.8.0"

[dev-dependencies]
quickcheck = "0.8"
quickcheck_macros = "0.8"
color-backtrace = { version = "0.2" }
